# rasch

./: .gitignore  Cargo.toml  LICENSE  README.md  config.vscode.code-workspace  gen-egtb.sh  make-egtb.sh  make-profiled-rasch.sh  rustfmt.toml
data/: openings
src/: basic.rs  common.rs  computing.rs  cpos.rs  cposio.rs  cposmove.rs  endgamedb.rs  fen.rs  fieldset.rs  lib.rs  main.rs  mdb.rs  opening.rs  position.rs  sortegtb.rs  util.rs  zobrist.rs
