[package]
name = "rasch"
version = "0.1.0"
authors = ["Ingo Wechsung <ingo.wechsung@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
ctrlc = "3.2.1"
sysinfo = { version = "0.22.3", default-features = false }
